# india-credit-signals

./: .gitignore  BACKTEST_PLAN.md  CLAUDE.md  CLAUDE_CODE_SETUP.md  CONTAGION_PLAN.md  DASHBOARD_PLAN.md  PLAN.md  pyproject.toml  requirements.txt
.claude/: OUTPUT_STYLE.md
.claude/output-styles/: vats_output_style.md
.streamlit/: config.toml
configs/: backtest_config.yaml  contagion_config.yaml  labeling_config.yaml  nbfc_entities.yaml  project.yaml  rating_agencies.yaml  training_config.yaml  triage_config.yaml
data/dashboard/: contagion_edges.parquet  crisis_results.json  entity_metadata.json  entity_scores.parquet  rating_actions.parquet  signals.parquet
data/processed/: audit_candidates.csv  finetuned_holdout_outputs.jsonl  finetuned_test_outputs.jsonl  labels_audit.jsonl  labels_calibration.jsonl  labels_calibration_sample.csv  spotcheck_sample.csv
data/raw/: rating_actions_sourced.csv  seed_rating_actions.csv
docs/pipeline-overview/: index.html
notebooks/: 00_colab_setup_and_inference.ipynb  phase2_1_base_model_eval.ipynb  phase2_2_lora_training.ipynb
reports/: phase1_4_training_data_design.md  phase1_label_quality.md  phase2_2_training_results.md  phase2_4_backtest_results.md  phase2_4_backtest_test_results.md  phase3_contagion_results.md  pipeline-executive.jsx
research/: EM_Credit_Risk_LLM_Briefing.docx  KEY_DECISIONS.md
scripts/: test_finrllama_inference.py
src/dashboard/: app.py
src/dashboard/utils/: data_loader.py  styling.py
src/dashboard/views/: alert_dashboard.py  contagion_network.py  entity_timeline.py  sector_heatmap.py  signal_feed.py
src/data/: format_training.py  import_gdelt.py  label_articles.py  label_audit.py  label_models.py  label_sampler.py  label_spotcheck.py  models.py  parse_training_output.py  promote_review.py  scrape_ratings.py  seed_ratings.py  triage_articles.py
src/signals/: contagion_backtest.py  entity_graph.py  export_dashboard_data.py  propagation.py
src/training/: backtest.py  evaluate.py
tests/: test_backtest.py  test_contagion_backtest.py  test_entity_graph.py  test_export_dashboard_data.py  test_format_training.py  test_label_models.py  test_propagation.py
